migrated and updated libs, fix 500 errors for empty body requests